# oparser

./: .gitignore  CLAUDE.md  README.md  a.out  dune-project  oparser.opam  test.txt  test_mutual_rec.ml  test_parse_app.ml
.claude/: settings.local.json
lib/: dune  lexer.ml  lexer.mli  parse_tree.ml  parse_tree.mli  parser.ml  parser.mli  print.ml  token.ml
test/: dune  dune-test-constants  dune-test-patterns  error_recovery_dune  test_class_parsing.ml  test_constants.ml  test_constants_simple.ml  test_definition_parsing.ml  test_error_recovery.ml  test_expr_ast_only.ml  test_expr_parser.ml  test_expr_parsing.ml  test_expr_simple.ml  test_lexer.ml  test_minimal.ml  test_oparser.ml  test_parse_tree.ml  test_parser.ml  test_pattern_constants.ml  test_pattern_parser.ml  test_polymorphic_variants.ml  test_type_parser.ml
